...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/userProfilePic"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/profile128px"
                app:civ_border_color="#CEA267"
                app:civ_border_width="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text=""
                android:textColor="#AF1B1B"
...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/recordsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/history32"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toStartOf="@+id/recordsTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/recordsTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Records"
                android:textColor="#C45508"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/recordsIcon"
                app:layout_constraintStart_toStartOf="@+id/editProfileTxt"
                app:layout_constraintTop_toTopOf="@+id/recordsIcon" />

            <ImageView
                android:id="@+id/editProfileIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pencil"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toStartOf="@+id/editProfileTxt"
                app:layout_constraintStart_toStartOf="parent"
...
            <TextView
                android:id="@+id/editProfileTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="200dp"
                android:text="Edit Profile"
                android:textColor="#C45508"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/editProfileIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editProfileIcon" />

            <ImageView
                android:id="@+id/changePasswordIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/padlock"
                app:layout_constraintEnd_toEndOf="@+id/editProfileIcon"
                app:layout_constraintStart_toStartOf="@+id/editProfileIcon"
                app:layout_constraintTop_toBottomOf="@+id/editProfileIcon" />

            <TextView
                android:id="@+id/changePasswordTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="180dp"
                android:text="Change Password"
                android:textColor="#C45508"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/changePasswordIcon"
                app:layout_constraintStart_toStartOf="@+id/editProfileTxt"
                app:layout_constraintTop_toTopOf="@+id/changePasswordIcon" />

            <ImageView
                android:id="@+id/logoutIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/logout"
                app:layout_constraintEnd_toEndOf="@+id/changePasswordIcon"
                app:layout_constraintStart_toStartOf="@+id/changePasswordIcon"
                app:layout_constraintTop_toBottomOf="@+id/changePasswordIcon" />

            <TextView
                android:id="@+id/logoutTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log Out"
                android:textColor="#C45508"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/logoutIcon"
                app:layout_constraintStart_toStartOf="@+id/changePasswordTxt"
                app:layout_constraintTop_toTopOf="@+id/logoutIcon" />
...
