...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="80dp"
                android:text="Profile Information"
                android:textColor="#AF1B1B"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profilePicImg"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:src="@drawable/profile128px"
                android:layout_marginRight="150dp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
...
                android:textColor="@color/white"
                android:layout_marginLeft="30dp"
                app:layout_constraintStart_toEndOf="@+id/profilePicImg"
                app:layout_constraintTop_toTopOf="@+id/profilePicImg" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/chooseImageBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/button"
                android:ems="8"
                android:text="choose image"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/profilePicImg"
                app:layout_constraintTop_toBottomOf="@+id/deleteImageBtn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/uploadImageBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="confirm image choice"
                android:textColor="@color/white"
                android:background="@drawable/button"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/chooseImageBtn"
                app:layout_constraintStart_toStartOf="@+id/chooseImageBtn"
                app:layout_constraintTop_toBottomOf="@+id/chooseImageBtn" />
...
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profilePicImg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext1"
                    android:ems="15"
                    android:hint="Username"
                    android:inputType="text"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
...
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext1"
                    android:ems="15"
                    android:hint="Address"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/restaurantEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext1"
                    android:ems="15"
                    android:hint="Food service"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:visibility="visible"/>

            </com.google.android.material.textfield.TextInputLayout>

...
                    android:inputType="textMultiLine"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/updateProfileInfoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:ems="12"
                android:background="@drawable/button2"
...
