...
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="170dp"
            android:text="Password"
            android:textColor="#AF1B1B"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

...
            android:textColorHint="#AF1B1B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/oldPwEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext1"
                android:ems="15"
                android:hint="Enter Current Password"
                android:inputType="textPassword"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/changeOldPwVisibility"
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/showpassword"
            app:layout_constraintBottom_toBottomOf="@+id/oldPwWrapper"
            app:layout_constraintEnd_toEndOf="@+id/oldPwWrapper"
...
            android:textColorHint="#AF1B1B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oldPwWrapper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPwEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext1"
                android:ems="15"
                android:hint="Enter New Password"
                android:inputType="textPassword"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/changeNewPwVisibility"
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/showpassword"
            app:layout_constraintBottom_toBottomOf="@+id/newPwWrapper"
            app:layout_constraintEnd_toEndOf="@+id/newPwWrapper"
            app:layout_constraintTop_toTopOf="@+id/newPwWrapper" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:src="@drawable/exclamationmark"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/newPwWrapper"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:ems="15"
            android:text="New password must be at least 6 characters long"
            android:textColor="#AF1B1B"
            app:layout_constraintEnd_toEndOf="@+id/newPwWrapper"
            app:layout_constraintStart_toEndOf="@+id/image1"
            app:layout_constraintTop_toBottomOf="@+id/newPwWrapper" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changePwBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:text="Change password"
            android:background="@drawable/button2"
            android:textColor="@color/white"
...
